--- a/changelog
+++ b/changelog
@@ -1,30 +1,5 @@
-zen-browser (1.17.15b-1) unstable; urgency=medium
+zen-browser (1.17.15b-1) unstable; urgency=low
 
-  * New upstream release 1.17.15b
+  * Initial release from source code.
 
- -- Ibrahimm Admin <admin@ibrahimm.online>  Thu, 01 Jan 2026 23:16:34 +0000
-
-zen-browser (1.17.15b-1) unstable; urgency=medium
-
-  * New upstream release 1.17.15b
-
- -- Ibrahimm Admin <admin@ibrahimm.online>  Thu, 01 Jan 2026 23:03:45 +0000
-
-zen-browser (1.17.15b-1) unstable; urgency=medium
-
-  * New upstream release 1.17.15b
-
- -- Ibrahimm Admin <admin@ibrahimm.online>  Wed, 31 Dec 2025 09:36:11 +0000
-
-zen-browser (1.17.15b-1) unstable; urgency=medium
-
-  * New upstream release 1.17.15b
-
- -- Ibrahimm Admin <admin@ibrahimm.online>  Wed, 31 Dec 2025 09:33:18 +0000
-
-zen-browser (1.17.15b-1) unstable; urgency=medium
-
-  * Packaging official binary release for Debian/Parrot.
-  * New upstream release 1.17.15b
-
- -- Ibrahimm Admin <admin@ibrahimm.online>  Wed, 31 Dec 2025 09:29:16 +0000
+ -- theycallmeibra <ibrahimmammedov7@gmail.com>  Sat, 03 Jan 2026 12:00:00 +0000
